# SMR1_tutorials

./: .gitignore  CMakeLists.txt  README.md
devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
src/item_frame/: CMakeLists.txt  package.xml
src/item_frame/include/item_frame/: Frame.h
src/item_frame/src/: Frame.cpp  node.cpp
src/learning/: CMakeLists.txt  package.xml
src/learning/scripts/: node.py
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: myworkcell.srdf
src/plc/: CMakeLists.txt  package.xml
src/plc/include/plc/: PLC.h
src/plc/msg/: sensor_info.msg
src/plc/src/: PLC.cpp  node.cpp  snap7.cpp
src/robot/: CMakeLists.txt  package.xml
src/robot/action/: MovePlant.action
src/robot/include/robot/: MoveActionServer.h  ScanNPlan.h
src/robot/src/: MoveActionServer.cpp  ScanNPlan.cpp  node.cpp
src/smr1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/smr1_moveit_config/config/: joint_limits.yaml  myworkcell.srdf  ur5.srdf
src/smr1_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  myworkcell_moveit_controller_manager.launch.xml  myworkcell_moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  ur5_moveit_planning_execution.launch  warehouse.launch
src/smr1_moveit_config/urdf/: Tafel.stl  eoat.stl  eoat_v2.stl  ourUR5.urdf.xacro  tray.stl  workcell.xacro
src/support/: CMakeLists.txt  package.xml
src/support/launch/: camera_read.launch  run_develop.launch  run_real.launch  run_simulated.launch
src/vision/: CMakeLists.txt  SQL_TO_CSV.py  package.xml  plant_db.csv  test_feature_db.py
src/vision/Database_capture/: Database_capture_v2.py  Database_capture_v3.py  captur all.py  captur_all.py  database_capture.py
src/vision/ML/: Database_read_test_v1.0.py  ML_Dataset_v2.0.py  ML_Load_ModelV2.0.py  ML_Readdataset_v1.0.py  Outlier_clean.py  Plant_sorting_test.py  Read db.py  SQL_TO_CSV.py  Train_ML.py  plant_db.csv  plant_db_1_v5  plant_db_1_v6  plant_db_2_v5  plant_db_2_v6  plant_db_3_v5  plant_db_3_v6  plant_db_v2.csv  temo.py  temp.py
src/vision/ML_application/: Plant_sorting.py  plant_db.csv
src/vision/ML_background/: Create_mask.py  ML_code.py  tomaat.py
src/vision/ML_background/Trained_models/model_1/: naive_bayes_pdfs.txt
src/vision/ML_background/Trained_models/model_2/: naive_bayes_pdfs.txt
src/vision/ML_background/Trained_models/model_3/: naive_bayes_pdfs.txt
src/vision/ML_background/scripts/: Create_mask.py  ML_code_test.py  create_ML_background.sh
src/vision/ML_tests/: data_vis.py  feature_select.py  plant_db_v4.csv  resize_data.py
src/vision/msg/: plant_info.msg
src/vision/scripts/: Database_Capture_v2.py  create_db.sh  feature_extract.py  naive_bayes_pdfs.txt  node.py  plant_db.csv  plant_db_1  plant_db_2_v2  plant_db_3  rename_foto's.py  test.py  test2.py  test_v2.py
src/vision/scripts/results/: naive_bayes_pdfs.txt
(+4 files in other folders)
